--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "com.akbiggs.unitytimer",
-  "version": "1.1.0",
-  "displayName": "Timer",
+  "version": "0.2",
+  "displayName": "UniTimer",
   "description": "Run actions after a delay in Unity3D.",
   "unity": "2018.1",
   "keywords": [
-    "timer",
-    "coroutine",
-    "callback"
+    "timer"
   ],
   "author": {
-    "name": "Alexander Biggs and Adam Robinson-Yu",
-    "url": "https://github.com/akbiggs/UnityTimer"
+    "name": "Sven Song",
+    "url": "https://github.com/sevensth/UnityTimer.git"
   },
-  "contributors": [
-    {
-      "name": "Pete Goodfellow",
-      "url": "https://github.com/Petethegoat"
-    }
-  ]
+  "contributors": []
 }
